--- a/Blazor WebAssembly/Blazor WebAssembly.csproj
+++ b/Blazor WebAssembly/Blazor WebAssembly.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\MyBlazor.Libraries\MyBlazor.Libraries.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="Shared\NavMenu.razor.css" CssScope="nav-menu"/>
+	</ItemGroup>
+
 </Project>
