--- a/Blazor WebAssembly/wwwroot/appsettings.json
+++ b/Blazor WebAssembly/wwwroot/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "Title": "فروشگاه تاپ لرن اینا",
-  "Footer": "کپی رایت ایمان مدائنی و دانشجویان عزیز",
+  "Title": "فروشگاه نیما",
+  "Footer": "کپی رایت   نیما جلال ابادی دانشجویان عزیز",
   "Sitelogo": "logo.png",
   "Ads": {
     "Name": "یک محصول تستی",
