--- a/Blazor WebAssembly/wwwroot/appsettings.Production.json
+++ b/Blazor WebAssembly/wwwroot/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
-  "Title": "فروشگاه تاپ لرن اینا",
-  "Footer": "کپی رایت ایمان مدائنی و دانشجویان عزیز",
+  "Title": "فروشگاه  اینا",
+  "Footer": "کپی رایت  دانشجویان عزیز",
   "Sitelogo": "logo.png",
   "Ads": {
     "Name": "یک محصول تستی",
